--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: chat
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: ">=2.19.6 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,7 +30,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -45,6 +44,18 @@ dependencies:
   firebase_storage:
   google_sign_in:
   image_picker:
+  flutter_facebook_auth:
+  flutter_bloc:
+  flutter_svg: ^2.0.7
+  get_it:
+  shared_preferences:
+  flutter_signin_button: ^2.0.0
+  awesome_dialog: ^3.1.0
+  bootstrap_icons: ^1.11.1
+  flutter_social_button:
+  flutter_spinkit: ^5.2.0
+  intl: ^0.18.1
+  conditional_builder_null_safety: ^0.0.6
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +73,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -70,9 +80,13 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/
-     - assets/icons/
-     - assets/images/welcome_chat.json
+    - assets/images/
+    - assets/images/welcome_chat.json
+    - assets/images/splach.jpg
+    - assets/images/clip1.svg
+    - assets/images/clip2.svg
+    - assets/images/clip3.svg
+    - assets/images/camera.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -85,10 +99,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-#  fonts:
-#     - family: Lobster
-#       fonts:
-#         - asset: fonts/LobsterTwo-Bold.ttf
+  fonts:
+    - family: Pacifico
+      fonts:
+        - asset: assets/fonts/Pacifico/Pacifico-Regular.ttf
 
   #         style: italic
   #   - family: Trajan Pro
