--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   flutter_spinkit: ^5.2.0
   intl: ^0.18.1
   conditional_builder_null_safety: ^0.0.6
+  firebase_messaging: ^14.7.3
+  dio: ^5.3.3
+  story_view: ^0.15.0
 
 dev_dependencies:
   flutter_test:
