--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,10 @@ dependencies:
   font_awesome_flutter:
   lottie: ^2.3.2
   dartz: ^0.10.1
-  firebase_core:
+  firebase_core: ^2.22.0
   firebase_auth:
   cloud_firestore:
-  firebase_storage:
+  firebase_storage: ^11.5.1
   google_sign_in:
   image_picker:
   flutter_facebook_auth:
@@ -59,7 +59,7 @@ dependencies:
   firebase_messaging: ^14.7.3
   dio: ^5.3.3
   story_view: ^0.15.0
-
+  awesome_notifications: ^0.8.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
