--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,12 +54,17 @@ dependencies:
   bootstrap_icons: ^1.11.1
   flutter_social_button:
   flutter_spinkit: ^5.2.0
-  intl: ^0.18.1
   conditional_builder_null_safety: ^0.0.6
   firebase_messaging: ^14.7.3
   dio: ^5.3.3
-  story_view: ^0.15.0
+  story_view: ^0.16.0
   awesome_notifications: ^0.8.2
+
+  pretty_dio_logger:
+  intl:
+
+  flutter_screenutil:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
